@@ -86,7 +86,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+
+        List<String> allowedOrigins = Arrays.asList(
+                "http://localhost:4200",
+                "http://localhost:80",
+                "http://localhost",
+                "http://127.0.0.1",
+                "http://127.0.0.1:80"
+        );
+
+        configuration.setAllowedOrigins(allowedOrigins);
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
